--- a/src/Components/NewTask/styles.module.css
+++ b/src/Components/NewTask/styles.module.css
@@ -1,3 +1,11 @@
+.container{
+    padding: 0 1rem;
+    width: 100%;
+    max-width: 116rem;
+    margin: 0 auto;
+
+}
+
 .content {
     max-width: 800px;
     margin: 0 auto;
@@ -42,17 +50,48 @@
     transition: background 0.1s;
 }
 
+.completed {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+
+    margin-bottom: 1.5rem;
+}
+
+.completed p {
+    color: var(--blue-dark);
+    font-size: 1rem;
+    font-weight: 700;
+}
+
+.textPurple p {
+    color: var(--purple-dark);
+}
+
+.completed span {
+    background: var(--gray-400);
+    color: var(--gray-200);
+    padding: 3px 9px;
+    border-radius: 999px;
+    font-size: 0.75rem;
+    font-weight: 700;
+}
+
 .list{ 
     margin-top: 2rem;
 }
 
 .emptyTask {
     display: flex;
+    margin: 64px auto 0;
+    max-width: 736px;
     
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 2rem;
+
+    border-radius: 8px;
     color: var(--gray-300);
     border-top: 1px solid var(--gray-400);
     padding: 4rem 1.5rem;
@@ -67,3 +106,42 @@
 .emptyTask p {
     font-weight: 700;
 }
+
+.container{
+    width: 100%;
+    max-width: 46rem;
+    margin: 0 auto;
+
+    padding: 0 1rem;
+}
+
+.header{
+    display: flex;
+    justify-content: space-between;
+}
+
+.header > div {
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+}
+  
+.header p {
+    color: var(--blue-dark);
+    font-size: 1rem;
+    font-weight: 700;
+}
+
+.header p.textPurple {
+    color: var(--purple-dark);
+}
+
+.header span {
+    background: var(--gray-400);
+    color: var(--gray-200);
+    padding: 3px 9px;
+    border-radius: 999px;
+    font-size:1rem;
+    font-weight: 700;
+}
+ 
