--- a/src/Components/TaskList/styles.module.css
+++ b/src/Components/TaskList/styles.module.css
@@ -1,42 +1,148 @@
 .container{
-    max-width: 800px;
+    max-width: 1000px;
     margin: 0 auto;
     display: flex;
 
+    justify-content: space-between;
+    
+    margin-top: 1.5rem;
+    font-size: 100.5%;
+    font-weight: bold
+}
+
+.list{
+    max-width: 1000px;
+    margin: 0 auto;
+    display: grid;
+
+    margin-top: 1.5rem;
+    gap: 1.3rem;
+}
+
+.taskContent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    
+    padding: 1rem;
+    border-radius: 8px;
+    background-color: var(--gray-400);
+}
+
+
+.container span {
+    color: var(--white);
+    padding: 0.125rem 0.5rem;
+
+    margin-left: 0.25rem;
+    border-radius: 8px;
+
+    justify-content:center;
+    align-items: center;
+    background-color: var(--gray-400);
+}
+
+.container p:first-child {
+    color: var(--blue-dark);
+}
+
+.container p:last-child {
+    color: var(--purple-dark);
+}
+
+
+.contentList{
+    max-width: 800px;
+    margin: 0 auto;
+    display: flex;
     margin-top: 1.5rem;
 }
 
-.taskBox{
-    flex: 1;
-}
 
-.taskContent{
+.taskBox{
     padding: 1rem;
     display: flex;
-
     align-items: flex-start;
     justify-content: space-between;
-
     background-color: var(--gray-400);
     border-radius: 8px;
+
 }
 
-.taskContent button {
+
+.btnComplete,
+.btnIncomplete {
+    display: flex;
+    justify-content: center;
+    padding: 0.125rem;
+    font-size: 87.5%;
+
+    border: 1px solid var(--blue-dark);
+    border-radius: 8px;
+   
+    background: none;
+    transition: opacity 0.15s, background-color 0.15s, border 0.15s;
+}
+
+
+.btnComplete,
+.btnIncomplete button:hover{
+    opacity: 0.7;
+    background-color: var(--purple-dark);
+}
+
+.btnComplete,
+.btnIncomplete svg {
+    opacity: 0.3;
+}
+  
+
+.taskComplete,
+.taskIncomplete {
+    display: flex;
+    justify-content: left;
+    width: 100%;
+    color: var(--gray-100);
+    transition: text-decoration 0.5s ease-out, color 0.5s ease-out;
+}
+
+
+.btnDelete{
     border: 0;
     color: var(--gray-300);
     background: transparent;
-    margin-top: 11px;
-
 
     cursor: pointer;
-    line-height: 0;
-    border-radius: 2px;
+
 }
 
-.taskContent button:hover {
+.btnDelete button:hover {
     color: var(--red-500);
 }
 
-.taskContent p {
-   margin-top: 11px;
+  
+.emptyList{
+    display: flex;
+    margin: 64px auto 0;
+    max-width: 1000px;
+    
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+
+    border-radius: 11px;
+    color: var(--gray-300);
+    border-top: 1px solid var(--gray-400);
+    padding: 4rem 1.5rem;
+    margin-top: 1.5rem;
+}
+
+.emptyTask svg {
+    opacity: 0.3;
+}
+  
+.emptyTask p {
+    font-weight: 700;
 }
